# SCP

./: CMakeLists.txt  LICENSE  README.md
code/: CMakeLists.txt
code/apps/: CMakeLists.txt
code/apps/robotPlayground/: CMakeLists.txt  H1.h  H1IKApp.h  H1MotionAnalyzer.h  H1MotionRetargetingApp.h  MocapBindings.h  RobotViewer.h  main.cpp
code/libs/: CMakeLists.txt
code/libs/RBSim/: CMakeLists.txt
code/libs/RBSim/include/RBSim/: AFState.h  ArticulatedFigure.h  CollisionChecker.h  RB.h  RBCollisionObject.h  RBCollisionShapes.h  RBJoint.h  RBSLoader.h  RBSRenderer.h  RBSRepo.h  RBSimConstraint.h  RBSimEngine.h  RBUIHelper.h  RBUtils.h
code/libs/RBSim/include/RBSim/lcp/: fastdot_impl.h  fastldltfactor_impl.h  fastldltsolve_impl.h  fastlsolve_impl.h  fastltsolve_impl.h  fastvecscale_impl.h  lcp.h  matrix.h  memory.h
code/libs/RBSim/src/: AFState.cpp  ArticulatedFigure.cpp  RB.cpp  RBCollisionShapes.cpp  RBJoint.cpp  RBSLoader.cpp  RBSRenderer.cpp  RBSimEngine.cpp  RBUtils.cpp
code/libs/RBSim/src/lcp/: fastdot.cpp  fastldltfactor.cpp  fastldltsolve.cpp  fastlsolve.cpp  fastltsolve.cpp  fastvecscale.cpp  lcp.cpp  matrix.cpp
code/libs/control/: CMakeLists.txt
code/libs/control/include/control/: GeneralizedCoordinatesRepresentation.h
code/libs/control/include/control/kinematics/: EndEffector.h  EndEffectorsObjective.h  IKObjectiveFunction.h  IKSolver.h  IKUIHelper.h  JointLimitsObjective.h  KinematicMotionPlan.h  RegularizerObjective.h
code/libs/control/src/: GeneralizedCoordinatesRepresentation.cpp
code/libs/control/src/kinematics/: EndEffectorsObjective.cpp  IKObjectiveFunction.cpp  IKSolver.cpp  JointLimitsObjective.cpp  KinematicMotionPlan.cpp  RegularizerObjective.cpp
code/libs/gui/: CMakeLists.txt
code/libs/gui/imgui_widgets/include/imgui_widgets/: customWidgets.h  implot_helper.h
code/libs/gui/include/gui/: application.h  camera.h  guiElements.h  guiMath.h  inputstate.h  light.h  mesh.h  model.h  renderer.h  shader.h  shadow_casting_light.h  shadow_map_fbo.h
code/libs/gui/shaders/: basic_shadow_lighting.frag  compute_shading.frag  optDemoC.frag  optDemoC.vert
code/libs/gui/src/: application.cpp  inputstate.cpp  mesh.cpp  model.cpp  shader.cpp  shadow_map_fbo.cpp
code/libs/optimization/: CMakeLists.txt
code/libs/optimization/include/optimization/: GradientDescentMinimizer.h  Minimizer.h  NewtonMinimizer.h  ObjectiveFunction.h  SoftEqualityConstraint.h  SoftUnilateralConstraint.h  utils.h
code/libs/optimization/src/: ObjectiveFunction.cpp  SoftUnilateralConstraint.cpp
code/libs/utils/: CMakeLists.txt
code/libs/utils/include/utils/: BVHReader.h  P3D.h  Quaternion.h  RigidTransform.h  V3D.h  basics.h  geoms.h  logger.h  mathUtils.h  physicsUtils.h  spline.h  timer.h  utils.h
code/libs/utils/src/: BVHReader.cpp  logger.cpp  physicsUtils.cpp
data/bvh/human/100styles/neutral/: Backwards Running.bvh  Forwards Running.bvh  Forwards Walking.root  Idling.bvh  Sidestep Running.bvh
data/robots/h1/: h1.rbs
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/tinyobjloader/: CMakeLists.txt
